@@ -9,6 +9,10 @@ Version 1.18-1 (opened February 9, 2010)
 	predict.prcomp/princomp. Gained choice type = "working" for
 	working residuals (as fitted.cca/rda). 
 
+	* simulate.rda, simulate.cca: gained argument rank passed to
+	predict.rda() or predict.rda(). This also allows simulation under
+	null model by setting rank = 0.
+
 Version 1.18-0 (closeed January 11, 2010 with release 1.17-0)
 
 	* Documented na.action in cca.object.
